# metal_detector_stm32F1

./: .gitignore  CMakeLists.txt  build_target_debug.bat  build_target_release.bat  metal_detector.yml  readme.rst  start quick.bat  start_debugger.bat  start_environment.bat  start_openocd.bat  target_erase.bat  target_flash_release.bat
cmake/: TargetToolchain_gcc_arm.cmake
documents/: ADC examples.url  ADC sample time calculations.xls
gdb/: gdb_start_script.txt
links/: blackpill jumper description.txt  links.txt  openocd gdb hints.txt
software/sources/: main.c
stmcubemx/: blackpill_metal_scanner.ioc
